# cli-pride-flags-rs

./: Cargo.toml  README.md  optimized.webm
optimized/: main.rs
src/: main.rs
