[package]
name = "cli-pride-flags-rs"
authors = ["Amy <axtlos@tar.black>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "*"
serde = "*"
serde_derive = "*"
colored = "2"
colorsys = "0.6.5"
terminal_size = "*"
rand = "0.7.3"
clap = "2.3"